--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <input type="text" name="debounce search" onkeyup="optimizedFunction()">
-    <script src="./JS/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
